--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         Your browser does not support the audio element.
     </audio>
 
-    <button class="button audio-button" onclick="startAudio()">♫지평선이 사라지는 곳 - 녹음♫</button>
+    <button class="button audio-button" onclick="startAudio()">♫ 지평선이 사라지는 곳 - 녹음 ♫</button>
 
     <!-- Step 1 -->
     <div id="step1" class="step active">
@@ -198,7 +198,7 @@
 
     <!-- Step 9 -->
     <div id="step9" class="step">
-        <p id="dormDescription" class="dorm-description"></p>
+        <span id="dormDescription" class="dorm-description"></span>
         <button class="button" onclick="playClickSound1(); goToNextStep(10)">1. 확인했어요.</button>
         <button class="button" onclick="playClickSound1(); goToNextStep(12)">2. 퉤.</button>
     </div>
