--- a/index.html
+++ b/index.html
@@ -48,6 +48,32 @@
   }
 }
 
+body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        #video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: black;
+            z-index: 9999;
+            opacity: 1;
+            transition: opacity 1s ease-out;
+        }
+
+        #video-container.hidden {
+            opacity: 0;
+            pointer-events: none; /* 비디오가 사라진 후 클릭 방지 */
+        }
+
+
         /* body 스타일이 @font-face 이후에 오도록 수정 */
         body {
         font-family: 'ChosunCentennial', sans-serif;
@@ -120,6 +146,14 @@
     </audio>
 
     <button class="button audio-button" onclick="startAudio()">♫ 지평선이 사라지는 곳 - 녹음 ♫</button>
+
+
+    <div id="video-container">
+        <video id="intro-video" autoplay muted>
+            <source src="https://raw.githubusercontent.com/chips0527/yuldo/main/open.mp4" type="video/mp4">
+            브라우저가 비디오 태그를 지원하지 않습니다.
+        </video>
+    </div>
 
     <!-- Step 1 -->
     <div id="step1" class="step active">
@@ -238,6 +272,20 @@
 
 <script>
 
+document.addEventListener("DOMContentLoaded", () => {
+    const video = document.getElementById("intro-video");
+    const videoContainer = document.getElementById("video-container");
+
+    video.addEventListener("ended", () => {
+        // 비디오 종료 시 오퍼시티 낮아짐
+        videoContainer.classList.add("hidden");
+
+        // 오퍼시티 효과 완료 후 비디오를 완전히 제거
+        setTimeout(() => {
+            videoContainer.style.display = "none";
+        }, 1000); // transition 시간과 일치시킴
+    });
+});
 
 // 사용자 입력 값 처리
 var userName = "사용자 이름"; // 여기에 사용자 이름을 입력받음
